# aura_api_client

./: .gitignore  Cargo.toml  README.md
aura_protos/protos/: aura_ct_rpc.proto  aura_limit_orders_rpc.proto  aura_rpc.proto  aura_sender_types.proto  aura_snipe_rpc.proto  aura_utils_rpc.proto  chrono.proto  decisol.proto  fastnum.proto  well_known.proto
aura_protos/protos/common/: types.proto
src/: client.rs  consts.rs  lib.rs  utils.rs
src/client/: api_types.rs  ct_rpc.rs  limit_orders_rpc.rs  snipe_rpc.rs  trade_rpc.rs  types.rs  utility_rpc.rs
src/client_ext/: balances.rs  cu.rs  debug.rs  mod.rs  orders.rs  stats.rs  ui.rs
